--- a/game_port.yaml
+++ b/game_port.yaml
@@ -1,4 +1,12 @@
 payload:
+  #LUDO
+  - DOMAIN-KEYWORD,ludo
+  - DOMAIN-SUFFIX,ludokingapi.com
+  - DOMAIN-SUFFIX,adtilt.com
+  - DOMAIN-SUFFIX,inmobi.com
+  - DOMAIN-SUFFIX,applovin.com
+  - DOMAIN-SUFFIX,inner-active.mobi
+  - DOMAIN-SUFFIX,inner-active2.mobi
   #ML
   - DOMAIN-KEYWORD,youngjoygame
   - DOMAIN-SUFFIX,youngjoygame.com
